--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./src/main.tsx"></script>
+    <script src="./src/server/api/responsiveVoiceAPI.js"></script>
   </body>
 </html>
