--- a/workspaces/ui/index.html
+++ b/workspaces/ui/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
-    <script src="./src/server/api/responsiveVoiceAPI.js"></script>
+    <script type="module" src="./src/index.tsx"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=KL0BHVky"></script>
+    <!-- <script src="./src/server/api/responsiveVoiceAPI.js"></script> -->
   </body>
 </html>
