--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./src/index.tsx"></script>
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=KL0BHVky"></script>
+    <script type="module" src="https://code.responsivevoice.org/responsivevoice.js?key=KL0BHVky"></script>
     <!-- <script src="./src/server/api/responsiveVoiceAPI.js"></script> -->
   </body>
 </html>
