--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/index.tsx"></script>
+    <script type="module" src="./src/App.tsx"></script>
     <script type="module" src="https://code.responsivevoice.org/responsivevoice.js?key=KL0BHVky"></script>
     <!-- <script src="./src/server/api/responsiveVoiceAPI.js"></script> -->
   </body>
